--- a/app/views/dogs/edit.erb
+++ b/app/views/dogs/edit.erb
@@ -2,7 +2,7 @@
 
     <h2> Edit'a'Pup </h2>
 
-  <form id="create pup" action="/dogs/<%= @dog.id %>" method="POST" >
+  <form id="edit pup" action="/dogs/<%= @dog.id %>" method="POST" >
     <label class="label" for="name"> Name </label>
     <input type="text" name="dog[name]" placeholder="Pup's name" value="<%= @dog.name %>">
     <br>
@@ -20,6 +20,8 @@
 
     <div class="submit"><input type="submit" value="Submit Pup"></div>
   </form>
+
+  <div class="submit"><form id="<input type="submit" value="Update Pup"> </div>
 </div>
 
 </div>
